assets/css/styles.css
/*
  Author Name: Noah Hamblen
  File Name: styles.css
  Date: 1/18/25
  CSS made with a mobile-first approach (tablet and desktop views at the bottom)
*/

/* CSS Reset */
* {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  list-style: none;
  text-decoration: none;
}

/* Make the entire page a flex container */
html,
body {
  height: 100%;
  margin: 0; /* Remove any margin from the body */
  display: flex;
  flex-direction: column;
}

/* Main content area (flex-grow allows it to expand to fill available space) */
main {
  flex-grow: 1;
}

/* Link styles */
a {
  color: black;
  font-size: 2rem;
}
a:visited {
  color: black;
}

/* font styles */
h2 {
  font-size: 2em;
}

h3 {
  font-size: 1.5em;
}

p {
  font-size: 1.2em;
}

/* Header styles */
#header_box {
  display: flex;
  width: 100%;
  justify-content: space-between;
  position: relative;
  top: 0;
  z-index: 5000;
  border-bottom: 3px solid #faa18b;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for better visibility */
  background-color: #1e242a;
  padding: 0.5em;
}

#header_1 {
  display: flex;
  align-items: center; /* Vertically centers items */
}

#header_1 h1 {
  font-size: 2.3em;
  color: white;
}

#header_2 {
  display: flex;
  align-items: center;
}

#nh_logo {
  height: auto;
  width: 2em;
  margin: 0.2em 0.5em 0 0.2em;
}

/* Footer styles */
#footer_box {
  display: flex;
  width: 100%;
  justify-content: space-between;
  position: relative;
  bottom: 0;
  z-index: 5000;
  border-top: 3px solid #faa18b;
  background-color: #1e242a;
  padding: 1em;
}

#footer_box a {
  color: white;
  font-size: 1.5em;
  text-decoration: underline;
}

#footer_box a:hover {
  color: #faa18b;
}

/* Hamburger, nav, and menu styling */
.off_screen_menu {
  background-color: #1e242a;
  height: 100vh;
  width: 100%;
  max-width: 200px;
  position: fixed;
  top: 0;
  right: -450px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-size: 3rem;
  transition: right 0.4s ease;
  justify-content: flex-start;
  padding-top: 1.5em;
  z-index: 1;
}

.off_screen_menu a {
  color: white;
}

.off_screen_menu a:hover {
  color: #faa18b;
}

nav {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
}

.off_screen_menu.active {
  right: 0;
  z-index: 1000;
}

.ham_menu {
  height: 50px;
  width: 40px;
  margin-left: auto;
  position: relative;
  z-index: 10000;
  cursor: pointer;
  left: 0;
  margin-right: 0.5em;
}

.ham_menu span {
  height: 5px;
  width: 100%;
  background-color: white;
  border-radius: 25px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  transition: transform 0.4s ease, opacity 0.4s ease;
}

.ham_menu span:nth-child(1) {
  top: 25%;
}

.ham_menu span:nth-child(3) {
  top: 75%;
}

.ham_menu.active span:nth-child(1) {
  top: 50%;
  transform: translate(-50%, -50%) rotate(45deg);
}

.ham_menu.active span:nth-child(2) {
  opacity: 0;
}

.ham_menu.active span:nth-child(3) {
  top: 50%;
  transform: translate(-50%, -50%) rotate(-45deg);
}

/* Dark overlay styles */
.overlay {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
  z-index: 1;
  display: none;
  pointer-events: auto; /* Allows clicks through */
}

.overlay.active {
  display: block; /* Show overlay when menu is active */
  pointer-events: auto; /* Allows interaction with menu */
  z-index: 999;
}

/* Projects and grid styling (index.html) */
.projects {
  padding: 2rem;
  text-align: center;
}

.projects h2 {
  padding-bottom: 1em;
}

.projects_grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  gap: 50px;
}

.project_item {
  border: 3px solid #aaaaaa;
  padding: 1rem;
  border-radius: 8px;
  text-align: center;
}

.project_preview {
  border: 2px solid #aaaaaa;
}

.project_item img {
  width: 100%;
  height: auto;
  border-radius: 8px;
}

.project_item h3 {
  margin: 1rem 0;
}

.project_item .button {
  display: inline-block;
  padding: 0.5rem 1rem;
  background-color: #faa18b;
  text-decoration: none;
  border-radius: 10px;
  font-size: 1em;
  margin-top: 1rem;
}

/* about.html styles */
#about_box img {
  width: 80%;
  height: auto;
  display: block; /* Make image a block-level element */
  margin: 0 auto; /* Center image horizontally */
  padding-top: 2em;
}

#about_box h2 {
  text-align: center;
  padding-top: 1em;
}

#about_box p {
  padding: 1em;
  font-size: 1.2em;
  margin-bottom: 1em;
}

/* contact.html styles */
.contact_container {
  max-width: 600px;
  margin: 50px auto;
  padding: 20px;
  background-color: #fff;
  border-radius: 8px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

.contact_container h2 {
  padding-bottom: 1em;
}

.form_group {
  margin-bottom: 15px;
}

label {
  display: block;
  font-size: 1.1em;
  margin-bottom: 5px;
}

input,
textarea {
  width: 100%;
  padding: 10px;
  border: 1px solid #ddd;
  border-radius: 4px;
  font-size: 1em;
}

textarea {
  resize: vertical;
}

button.submit_btn {
  width: 100%;
  padding: 10px;
  background-color: #faa18b;
  border: none;
  border-radius: 4px;
  font-size: 1.2em;
  cursor: pointer;
}

input:focus,
textarea:focus {
  border-color: #faa18b;
  outline: none;
}

/* Resume iframe styling (resume.html) */
#resume {
  justify-content: center;
  width: 100%;
  height: 570px;
  padding-top: 1em;
}

#resume_container {
  /* Center resume in container */
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Styles for tablets */
@media (min-width: 768px) {
  /* Resume iframe styling (resume.html) */
  #resume {
    padding-top: 1.5em 0 1.5em 0;
    width: 80%;
    height: 880px;
  }
}

/* Styles for desktops and larger devices */
@media (min-width: 1024px) {
  /* Font styles */
  h2 {
    font-size: 3em;
  }

  /* Header styles */
  #header_box {
    padding: 0 10em;
  }

  /* Footer styles */
  #footer_box {
    padding: 1em 20em;
  }

  /* about.html styles */
  #about_box {
    display: flex;
    padding: 0 15em;
    justify-content: center;
    align-items: center;
  }

  #about_box p {
    justify-content: center;
    align-items: center;
    font-size: 2em;
  }

  #about_box img {
    width: 100%;
    height: auto;
    display: block; /* Make image a block-level element */
    padding-top: 2em;
  }

  #mobile_about_h2 {
    display: none;
  }

  #desktop_about_h2 {
    display: block;
    text-align: center;
    padding-top: 2em;
  }

  /* Projects and grid styling (index.html) */
  .project_item {
    border: 3px solid #aaaaaa;
    padding: 1rem;
    border-radius: 8px;
    text-align: center;
  }

  .project_preview {
    border: 2px solid #aaaaaa;
  }

  .project_item img {
    width: 100%;
    height: auto;
    border-radius: 8px;
  }

  .project_item h3 {
    margin: 1rem 0;
  }

  .project_item .button {
    display: inline-block;
    padding: 0.5rem 1rem;
    background-color: #faa18b;
    text-decoration: none;
    border-radius: 10px;
    font-size: 1em;
    margin-top: 1rem;
  }

  /* Resume iframe styling (resume.html) */
  #resume {
    padding: 2em 0 2em 0;
    justify-content: center;
    width: 60%;
    height: 1440px;
  }
}

